--- a/src/App.css
+++ b/src/App.css
@@ -62,8 +62,13 @@
 {
    width: 14%;
    min-width: 250px;
+   min-height: 60px;
 }
 
+.headImg1
+{
+  width: 50%;
+}
 .join-button
 {
   padding: 10px;
@@ -84,7 +89,8 @@
 .mission-statement
 {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  padding: 50px 125px;
 }
 
 .big-text 
