--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,17 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,700,800&display=swap');
 * {
   font-family: 'Montserrat', sans-serif;
+  box-sizing: border-box;
 }
 a {
   text-decoration: none;
 }
 
-p {
+p, li > a {
   font-weight: 500;
   color: #6B6B6B;
 }
+
 
 h1 {
   font-weight: 700;
@@ -51,8 +53,19 @@ h1 {
 {
   display: flex;
   justify-content: space-between;
-  padding: 50px 125px;
+  padding: 25px 125px;
 }
+
+.navbar > *
+{
+  flex-basis: 25%;
+}
+
+.nav-rest:last-child
+{
+  flex-basis: 17%;
+}
+
 
 .image 
 {
@@ -64,24 +77,15 @@ h1 {
 .nav-rest
 {
   display: flex;
+  justify-content: space-evenly;
   list-style-type: none;
   padding: 0;
-}
-
-.nav-rest > *
-{
-  margin-right: 75px;
-}
-
-.nav-rest li:last-child
-{
-  margin-right: 0px;
 }
 
 
 .headImg1
 {
-  width: 50%;
+  width: 100%;
 }
 .join-button
 {
@@ -89,29 +93,26 @@ h1 {
   border-radius: 10px;
   color: white;
   background-image: linear-gradient(to left, #9B7FE6,#661AB1);
-  transition: box-shadow 0.1s ease-in-out;
   white-space: nowrap;
+  box-shadow: 7px 4px 4px 0px #B8B8B8;
+
 }
 
-.join-button:hover
-{
-  /* -webkit-box-shadow: 10px 13px 17px 2px rgba(128,128,128,1);
-  -moz-box-shadow: 10px 13px 17px 2px rgba(128,128,128,1); */
-  box-shadow: 7px 4px 4px 0px #B8B8B8;
-}
 
 .mission-statement
 {
   display: flex;
   justify-content: space-between;
   padding: 50px 125px;
-  flex-wrap: wrap;
 }
 
+.bigish-text
+{
+  font-size: 2.5rem;
+}
 .big-text 
 {
   font-size: 3rem;
-  
 }
 
 .bold-text
@@ -120,7 +121,7 @@ h1 {
 }
 span.bigger-text
 {
-  font-size: 5rem;
+  font-size: 4rem;
 }
 
 /* Join Us */
@@ -136,9 +137,11 @@ span.bigger-text
 {
   padding: 15px 25px;
   background-image: linear-gradient(to right, #6701B2, #9000FE);
+  box-shadow: 7px 4px 4px 0px #000000;
+  transition: all 0.5s ease-in-out;
 }
 
-.join-us-segment p, .join-us-segment h1, .whether-segment h1
+.join-us-segment p, .join-us-segment h1
 {
   color: white;
 }
@@ -200,9 +203,32 @@ span.bigger-text
 }
 
 /* Whether you're a ... */
-.whether-segment
+
+
+.bg-grey
 {
   background-color: #F5F5F5;
+}
+
+.whether-segment h1.white
+{
+  color: white;
+}
+
+.card
+{
+  padding: 0px 10px;
+  border-radius: 20px;
+}
+
+.bg-purple-gradient
+{
+  background-image: linear-gradient(to right, #8113AA, #786Ac7);
+}
+
+.typed-cursor
+{
+  font-size: 2.5rem;
 }
 @keyframes App-logo-spin {
   from {
@@ -218,7 +244,7 @@ span.bigger-text
   display: flex;
   list-style-type: none;
   padding: 50px 75px;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 h1.main1
@@ -228,13 +254,13 @@ h1.main1
 
 p.submain1
 {
-  font-size: 1rem;
+  font-size: 1.2rem;
   text-align: center;
 }
 
 .intro 
 {
-  padding: 40px
+  padding: 40px 150px;
 }
 
 .bar
