--- a/src/SignUp.css
+++ b/src/SignUp.css
@@ -71,7 +71,7 @@
   padding-right: 30px;
   color: white;
   background-image: linear-gradient(to left, #9B7FE6,#661AB1);
-  transition: box-shadow 0.1s ease-in-out;
+  box-shadow: 4px 4px 4px 0px #B8B8B8;
   white-space: nowrap;
 }
 
