--- a/src/App.css
+++ b/src/App.css
@@ -66,7 +66,25 @@ h1 {
   flex-basis: 20%;
 }
 
+.navbar > ul > li::after
+{
+  content: "";
+  display: block;
+  width: 0%;
+  padding-top: 5px;
+  border-bottom: 3px solid #6701B2;
+  transition: all 0.25s ease-in-out;
+}
 
+
+.navbar > ul > li:hover::after
+{
+  width: 100%;
+}
+.navbar > ul > li.join:last-child:hover::after
+{
+  width: 0%;
+}
 .image 
 {
    width: 14%;
@@ -92,7 +110,7 @@ h1 {
   padding: 10px;
   border-radius: 10px;
   color: white;
-  background-image: linear-gradient(to left, #9B7FE6,#661AB1);
+  background-image: linear-gradient(to right, #6701B2, #9000FE);
   white-space: nowrap;
   box-shadow: 7px 4px 4px 0px #B8B8B8;
 
@@ -103,7 +121,7 @@ h1 {
 {
   display: flex;
   justify-content: space-between;
-  padding: 0px 125px;
+  padding: 20px 125px 0px;
 }
 
 .bigish-text
