--- a/src/SignUp.css
+++ b/src/SignUp.css
@@ -1,74 +1,74 @@
 .name-form
 {
   display:flex;
-  padding-bottom: 12px
+  padding-bottom: 0.5rem
 }
 
 .info-form
 {
   display: flex;
-  padding-bottom: 10px;
+  padding-bottom: 0.5rem;
 }
 
 .loc-form
 {
   display: flex;
-  padding-bottom: 10px;
+  padding-bottom: 0.5rem;
 }
 
 .how-find-form
 {
   display: flex;
-  padding-bottom: 10px;
+  padding-bottom: 0.5rem;
 }
 
 .name-form-items
 {
   flex-basis: 50%;
-  padding: 10px;
+  padding: 1rem;
 }
 
 .info-form-email
 {
   flex-basis: 60%;
-  padding: 10px;
+  padding: 1rem;
 }
 
 .info-form-provider
 {
   flex-basis: 40%;
-  padding: 10px;
+  padding: 1rem;
   color: gray;
 }
 
 .loc-form-states
 {
   flex-basis: 20%;
-  padding: 10px;
+  padding: 0.5rem;
   color: gray;
 }
 
 .loc-form-city
 {
   flex-basis: 80%;
-  padding: 10px;
+  padding: 1rem;
   color: gray;
 }
 
 .how-find-form-dropmenu
 {
   flex-basis: 100%;
-  padding: 10px;
+  padding: 1rem;
   color: gray;
 }
 
 .submit-button
 {
-  font-size: 13px;
+  font-size: 1rem;
   padding: 12px;
   border-radius: 13px;
-  padding-left: 30px;
-  padding-right: 30px;
+  padding-left: 2rem;
+  padding-right: 2rem;
   color: white;
   background-image: linear-gradient(to left, #9B7FE6,#661AB1);
   box-shadow: 4px 4px 4px 0px #B8B8B8;
@@ -77,7 +77,7 @@
 
 .x-large-text
 {
-  font-size:28.5px; 
+  font-size:1.75rem; 
 }
 
 .bot-bar
@@ -120,6 +120,7 @@
   font-size: 12px;
   color: white;
   background-image: #460B8D;
+  white-space: nowrap;
 }
 
 .signed-up-text
@@ -129,55 +130,8 @@
   color: white;
 }
 
-.popup
+.more-details
 {
-  position: relative;
-  display: inline-block;
-  cursor: pointer;
-}
-
-.popuptext
-{
-  visibility: hidden;
-  width: 160px;
-  background-color: #555;
-  color: #fff;
-  text-align: center;
-  border-radius: 6px;
-  padding: 8px 0;
-  position: absolute;
-  z-index: 1;
-  bottom: 125%;
-  left: 50%;
-  margin-left: -80px;
-}
-
-.popuptext::after{
-  content: "";
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  margin-left: -5px;
-  border-width: 5px;
-  border-style: solid;
-  border-color: #555 transparent transparent transparent;
-}
-
-.show
-{
-  visibility: visible;
-  -webkit-animation: fadeIn 1s;
-  animation: fadeIn 1s;
-}
-
-@-webkit-keyframes fadeIn
-{
-  from {opacity: 0;}
-  to {opacity: 1;}
-}
-
-@keyframes fadeIn
-{
-  from {opacity: 0;}
-  to {opacity:1 ;}
+  font-size: 0.9rem;
+  font-weight: bold;
 }
