--- a/src/SignUp.css
+++ b/src/SignUp.css
@@ -25,19 +25,19 @@
 .name-form-items
 {
   flex-basis: 50%;
-  padding: 1rem;
+  padding: 0.5rem;
 }
 
 .info-form-email
 {
   flex-basis: 60%;
-  padding: 1rem;
+  padding: 0.5rem;
 }
 
 .info-form-provider
 {
   flex-basis: 40%;
-  padding: 1rem;
+  padding: 0.5rem;
   color: gray;
 }
 
@@ -51,14 +51,14 @@
 .loc-form-city
 {
   flex-basis: 80%;
-  padding: 1rem;
+  padding: 0.5rem;
   color: gray;
 }
 
 .how-find-form-dropmenu
 {
   flex-basis: 100%;
-  padding: 1rem;
+  padding: 0.5rem;
   color: gray;
 }
 
@@ -66,18 +66,17 @@
 {
   font-size: 1rem;
   padding: 12px;
-  border-radius: 13px;
+  border-radius: 20px;
   padding-left: 2rem;
   padding-right: 2rem;
   color: white;
-  background-image: linear-gradient(to left, #9B7FE6,#661AB1);
-  box-shadow: 4px 4px 4px 0px #B8B8B8;
+  background-color: var(--middle-purple);
   white-space: nowrap;
 }
 
 .x-large-text
 {
-  font-size:1.75rem; 
+  font-size:2.3rem; 
 }
 
 .bot-bar
@@ -86,9 +85,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px;
-  padding-left: 180px;
-  padding-right: 180px;
+  padding: 20px;
 }
 
 .contact-button
@@ -130,8 +127,7 @@
   color: white;
 }
 
-.more-details
+.form-padding
 {
-  font-size: 0.9rem;
-  font-weight: bold;
+  margin-top: 15px
 }
