--- a/src/ValueProps.css
+++ b/src/ValueProps.css
@@ -2,6 +2,13 @@
 {
     display:flex;
     flex-direction: column;
-    font-size: 1 rem;
+    font-size: 1.7rem;
     font-weight: bold;
+    color: black;
+}
+
+.value-prop-para
+{
+    font-size: 1.25rem;
+    font-weight: normal;
 }
