--- a/src/Features.css
+++ b/src/Features.css
@@ -1,15 +1,14 @@
 .land-features {
-   padding: 50px 75px;
+   padding: 50px 10vw;
    text-align: center;
 }
 
 div.land-features > div > div {
    flex-basis: 30%;
-   margin: 10px;
+   margin: 0.5em;
    display: flex;
    flex-direction: column;
    align-items: center;
-   justify-content: center;
 }
 
 div.land-features > div > div > h2 {
@@ -21,14 +20,29 @@ div.land-features > div > div > img {
    width: 33%;
 }
 
+@media screen and (max-width: 640px) {
+   div.land-features > div {
+      flex-direction: column;
+   }
+   
+}
+/* 
+@media screen and (max-width: 440px) {
+   div.land-features > div {
+      flex-direction: column;
+   }
+} */
 .land-get-started {
    margin-top: 50px;
    background-color: var(--turquoise);
    color: white;
    text-align: center;
-   padding: 25px 300px 50px 300px;
+   padding: 2em calc(2em + 8vw) 4em calc(2em + 8vw);
 }
 
+.land-get-started h2 {
+   font-size: calc(1rem + 1vw);
+}
 .land-get-started-btn {
    padding: 5px 25px;
    border: 2px solid white;
