--- a/src/Header.css
+++ b/src/Header.css
@@ -2,13 +2,19 @@
 .land-header {
    display: flex;
    justify-content: space-between;
-   max-height: 75px;
-   padding: 15px 45px 15px 30px;
+   max-height: 85px;
+   padding: 1em 2em 1em 1.25em;
 }
 
+@media screen and (max-width: 480px) {
+   .land-header {
+      padding: 1em 1em 1em 0.25em;
+   }
+}
 .land-logo {
-   max-width: 250px;
-   max-height: 75px;
+   min-width: 200px;
+   width: 20vw;
+   max-height: 85px;
 }
 
 .land-header-btn {
@@ -38,13 +44,14 @@
    color: var(--turquoise);
    background-color: white;
 }
-.land-header-images {
+.land-header-section {
    position: relative;
 
 }
 
-.land-header-images > img {
+.land-header-section .land-header-images > img {
    width: 100%;
+   display: block;
 }
 
 .land-overlay {
@@ -57,24 +64,33 @@
 .land-chat-overlay {
    position: absolute;
    max-width: 75px;
-   right: 15px;
-   bottom: 15px;
+   right: 1em;
+   bottom: 1em;
    z-index: 10;
-   
+   width: 15%;
 }
 .land-text-overlay {
    box-sizing: border-box;
-   position: absolute;
-   top: 0;
-   z-index: 10;
+   background-color: var(--middle-purple);
    height: 100%;
    width: 100%;
-   padding: 0px 60px 75px;
+   padding: 0 1.25em 3em;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-end;
    color: white;
+   text-align: center;
+}
+
+@media screen and (min-width: 600px) {
+   .land-text-overlay {
+      position: absolute;
+      top: 0;
+      z-index: 10;
+      background-color: transparent;
+      padding-bottom: 5em;
+   }
 }
 
 .land-text-overlay > a {
