--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,700,800&display=swap');
+@import url("https://use.typekit.net/cix3tat.css");
 /* * {
   font-family: 'Montserrat', sans-serif;
 } 
@@ -46,24 +47,52 @@ a.land-btn {
    font-weight: 700;
 }
 
-h1 {
-   font-size: calc(1.25rem + 2vw);
+.body-light {
+   font-family: museo-sans, sans-serif;
+   font-style: normal;
+   font-weight: 300;
 }
 
+.body-bold {
+   font-family: museo-sans, sans-serif;
+   font-style: normal;
+   font-weight: 500;
+}
+
+.body-heavy {
+   font-family: museo-sans, sans-serif;
+   font-style: normal;
+   font-weight: 700;
+}
+h1 {
+   font-size: calc(2.5rem + 2vw);
+}
+
+h2 {
+   font-size: calc(1.5rem + 2vw);
+}
+
+h3 {
+   font-size: calc(1rem + 1.5vw);
+}
+
+h4 {
+   font-size: calc(1.25rem + 0.1vw);
+}
+
+p {
+   font-size: calc(1rem + 0.1vw);
+}
 .body-text {
    font-family: museo-sans, sans-serif;
    font-style: normal;
-   font-weight: 300;  
+   font-weight: 500;  
+   color: var(--light-gray);
 }
 
 div.page-spacing > * > * {
   padding-left: 8vw;
   padding-right: 8vw;
-}
-
-p, li > a {
-  font-weight: 500;
-  color: #6B6B6B;
 }
 
 *.color-black
