--- a/src/ValueProps.css
+++ b/src/ValueProps.css
@@ -25,7 +25,7 @@
 }
 
 .value-props > div {
-   margin-bottom: 10em;
+   margin-bottom: 9em;
 }
 
 .value-colleagues
@@ -72,6 +72,21 @@ div.value-clients > img
     height: 85%;
     object-fit: contain;
     flex-basis: 30%;    
+}
+@media screen and (max-width: 1270px) 
+{
+   .value-props > div 
+   {
+      margin-bottom: 5em;
+   }
+}
+
+@media screen and (max-width: 980px) 
+{
+   .value-props > div
+   {
+      margin-bottom: 3em;
+   }
 }
 
 @media screen and (max-width: 640px)
