--- a/src/Header.css
+++ b/src/Header.css
@@ -12,7 +12,9 @@
 }
 .land-logo {
    width: 25%;
-   height: 25%;
+   height: auto;
+   object-fit: contain;
+   max-height: 11vh;
 }
 
 .land-header-btn {
