--- a/src/Header.css
+++ b/src/Header.css
@@ -12,9 +12,7 @@
 }
 .land-logo {
    width: 25%;
-   height: auto;
-   object-fit: contain;
-   max-height: 11vh;
+   height: 25%;
 }
 
 .land-header-btn {
