--- a/src/SignUp.css
+++ b/src/SignUp.css
@@ -78,6 +78,13 @@ div.loc-form > .loc-form-city
   flex-basis: 50%;  
 }
 
+.loc-form-other
+{
+   width: 100%;
+   padding: 0.5rem;
+   color: gray;
+}
+
 div.loc-form > .loc-form-states-label
 {
    font-size: 0.2rem;
